commit some comments